# sudoku-solver

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  s.txt  sudoku.py  sudoku1.txt  sudoku2.txt  sudoku3.txt  sudoku4.txt  sudoku7.txt  sudoku_functions.py
hello/: compound.py  hello.py
old/: old_sudoku.py  old_sudoku_functions.py
samples/: sudoku5.txt  sudoku6.txt  sudoku8.txt  sudoku9.txt
sudoku_solver/: sudoku.py  sudokulib.py  sutui.css  sutui.py  test_sudoku.py
