[tool.poetry]
name = "sudoku-solver"
version = "0.1.0"
description = "Sudoku solver"
authors = ["Gianluca Mascolo <gianluca@gurutech.it>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/gianluca-mascolo/sudoku-solver/"
repository = "https://github.com/gianluca-mascolo/sudoku-solver/"
readme = "README.md"
packages = [{include = "sudoku_solver"}]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.89.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"

[tool.black]
line-length = 200
extend-exclude = "old"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sudoku = "sudoku_solver.sudoku:main"
